--- a/examples/eta/views/index.html
+++ b/examples/eta/views/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%~ E.includeFile("header.html", {title: it.title}) %>
+    <%~ includeFile("header.html", {title: it.title}) %>
   </head>
   <body>
     <div id="content">
-      <%~ E.includeFile("users.html", it) %>
+      <%~ includeFile("users.html", it) %>
     </div>
-    <%~ E.includeFile("footer.html") %>
+    <%~ includeFile("footer.html") %>
   </body>
 </html>
